# hal-effect

./: pyproject.toml
.github/workflows/: test.yml
src/hal_effect/: __init__.py  parser.py  types.py
tests/: test_basic.py  test_effect_script.py  test_particle_script.py
tools/: script.ksy
