[project]
name = "hal-effect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marijn van der Werf", email = "marijn.vanderwerf@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
